// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DestructiveButton matches the disabled visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyle": {
      "color": "#bdbdbd",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f0f0f0",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyle": {
      "color": "#bdbdbd",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`DestructiveButton matches the focused visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyle": {
      "color": "#ffffff",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#d13438",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyle": {
      "color": "#bc2f32",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`DestructiveButton matches the hovered visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyle": {
      "color": "#ffffff",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#d13438",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyle": {
      "color": "#bc2f32",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#fdf6f6",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`DestructiveButton matches the pressed visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyle": {
      "color": "#ffffff",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#d13438",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyle": {
      "color": "#bc2f32",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#fdf6f6",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;

exports[`DestructiveButton matches the rest visual state snapshot across appearances 1`] = `
[
  {
    "appearance": "primary",
    "contentStyle": {
      "color": "#ffffff",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#d13438",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
  {
    "appearance": "subtle",
    "contentStyle": {
      "color": "#bc2f32",
      "flexShrink": 1,
      "fontFamily": "Helvetica Neue",
      "fontSize": 14,
      "fontWeight": "400",
      "lineHeight": 20,
      "textAlign": "center",
    },
    "rootStyle": {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#00000000",
      "borderColor": "#00000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    },
  },
]
`;
